<resources>
    <string name="app_name">BarHopping</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- General -->
    <string name="map">地圖</string>
    <string name="rank">排行</string>
    <string name="post">貼文</string>
    <string name="explore">探索</string>
    <string name="profile">個人</string>
    <string name="route">路線</string>
    <string name="person">名人堂</string>
    <string name="bar">酒吧</string>

    <!-- Map -->
    <string name="search_here">在這裡搜尋地點</string>
    <string name="next_step">下一步</string>
    <string name="previous_step">上一步</string>
    <string name="start_game">開始遊戲</string>
    <string name="your_location">你的位置</string>
    <string name="seven">7-11</string>
    <string name="family">全家</string>
    <string name="hi_life">萊爾富</string>
    <string name="ok_mart">ok</string>
    <string name="step_1">步驟一：選擇目的地</string>
    <string name="step_1_content">請點選地標或輸入目的地</string>
    <string name="step_2">步驟二：規劃路徑</string>
    <string name="step_2_content">請篩選超商，並點選想經過的超商</string>
    <string name="step_2_tips">再次點擊取消</string>
    <string name="step_3">步驟三：邀請好友並開始遊戲</string>
    <string name="step_3_content">點選下一步QR Code，掃描加入此路線\n遊戲即將開始🍺🍻</string>
    <string name="qr_dialog">請朋友掃描QR Code加入遊戲！</string>
    <string name="schedule">目前進度：</string>
    <string name="total">總共超商：</string>
    <string name="click_take_photo">拍張照紀錄一下吧 →</string>

    <!-- Map finished-->
    <string name="congrate">恭喜達成！</string>
    <string name="congrate_all">恭喜全體達成！</string>
    <string name="leave_commend">請留下你的評分及評論！</string>
    <string name="your_commend">請在這輸入評論！</string>
    <string name="submit">提交</string>
    <string name="already_market">已到達便利商店！</string>
    <string name="take_photo_content">拍張照片來顯示完成任務吧！</string>
    <string name="give_up">放棄遊戲</string>
    <string name="take_photo">前往拍照</string>

    <!-- Rank market -->
    <string name="count">超商數量：</string>
    <string name="length">路程長度：</string>
    <string name="degree">難易程度：</string>
    <string name="go_navigate">開始遊戲</string>
    <string name="detail_hint">點擊地標，地圖右下可以切換Googl Map導航</string>
    <string name="marquee_rank">歡迎來到酒精路跑～   這是酒精跑馬燈   來看看大家最近都在哪裡酒精路跑吧！！   或是看看自己有沒有上名人榜！！</string>
    <string name="finished">🎉完成紀錄🎉</string>

    <!-- new post -->
    <string name="bar_post">酒吧新貼文</string>
    <string name="take_photo_post">點擊拍照或選擇照片</string>
    <string name="add_commend">加上解說...</string>
    <string name="add_locate">新增地點</string>
    <string name="share">分享</string>

    <!-- profile -->
    <string name="market_total">超商總計</string>
    <string name="bar_total">酒吧總計</string>
    <string name="following">追蹤中：</string>
    <string name="follow">追蹤中</string>
    <string name="followed">被追蹤</string>
    <string name="logout">登出</string>
    <string name="my_post">我的發文</string>
    <string name="my_follow">我的追蹤</string>
    <string name="my_collection">我的收藏</string>
    <string name="route_market">路跑超商</string>
    <string name="bar_share">酒吧分享</string>

    <!-- explore -->
    <string name="bar_explore">酒吧探索</string>
    <string name="marquee_explore">Yoyoyo～ 這是大家熟悉的AKA跑馬燈，一起來酒吧探索吧！ 點擊右下按鈕有驚喜喔！🆒🆒</string>

    <!-- Request permission -->
    <string name="location_permission_denied">位置權限拒絕</string>
    <string name="permission_required_toast">權限要求通知</string>
    <string name="permission_rationale_location">我們需要您的位置來開始遊戲</string>

    <string name="server_client_id">910821268879-j1p8l78iu3f8doi6hjdrd8vvmr2o203q.apps.googleusercontent.com</string>
</resources>