<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".map.finished.SuccessDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/congrate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/congrate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/market_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/route_linear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/congrate_tv">

            <TextView
                android:id="@+id/market_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"
                app:layout_constraintEnd_toStartOf="@id/number_tv" />

            <TextView
                android:id="@+id/number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/market_number_tv"
                app:layout_constraintStart_toEndOf="@id/market_number_tv"
                app:layout_constraintTop_toTopOf="@id/market_number_tv"
                tools:text="10" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/route_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/market_linear"
            app:layout_constraintTop_toTopOf="@id/market_linear">

            <TextView
                android:id="@+id/route_length_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length" />

            <TextView
                android:id="@+id/length_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/route_length_tv"
                app:layout_constraintStart_toEndOf="@id/route_length_tv"
                app:layout_constraintTop_toTopOf="@id/route_length_tv"
                tools:text="2KM" />

        </LinearLayout>

        <ImageView
            android:id="@+id/map_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="#B5B5B5"
            app:layout_constraintTop_toBottomOf="@id/market_linear" />

        <TextView
            android:id="@+id/commend_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/leave_commend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map_image" />

        <RatingBar
            android:id="@+id/rating_degree"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3"
            app:layout_constraintStart_toStartOf="@id/commend_tv"
            app:layout_constraintTop_toBottomOf="@id/commend_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_degree">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commend_box"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:hint="@string/your_commend" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>