<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="step2"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/step2_card_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/step2_constrain_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/step2_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="left"
                    android:text="@string/step_2"
                    app:layout_constraintEnd_toEndOf="@id/step2_constrain_layout"
                    app:layout_constraintStart_toStartOf="@id/step2_constrain_layout"
                    app:layout_constraintTop_toTopOf="@id/step2_constrain_layout" />

                <TextView
                    android:id="@+id/step2_content_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="left"
                    android:text="@string/step_2_content"
                    app:layout_constraintEnd_toEndOf="@id/step2_title_tv"
                    app:layout_constraintStart_toStartOf="@id/step2_title_tv"
                    app:layout_constraintTop_toBottomOf="@id/step2_title_tv" />

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/dot_icon"
                    app:layout_constraintStart_toStartOf="@id/step2_content_tv"
                    app:layout_constraintTop_toTopOf="@+id/location_edit"
                    app:srcCompat="@drawable/ic_baseline_my_location_24" />

                <EditText
                    android:id="@+id/location_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@id/step2_content_tv"
                    app:layout_constraintStart_toEndOf="@id/location_icon"
                    app:layout_constraintTop_toBottomOf="@id/step2_content_tv"
                    tools:text="your location" />

                <ImageView
                    android:id="@+id/dot_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/destination_icon"
                    app:layout_constraintStart_toStartOf="@id/location_icon"
                    app:layout_constraintTop_toBottomOf="@+id/location_icon"
                    app:srcCompat="@drawable/ic_baseline_more_vert_24" />

                <ImageView
                    android:id="@+id/destination_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintBottom_toBottomOf="@id/step2_destination_edit"
                    app:layout_constraintStart_toStartOf="@id/dot_icon"
                    app:layout_constraintTop_toBottomOf="@+id/dot_icon"
                    app:srcCompat="@drawable/ic_baseline_location_on_24" />

                <EditText
                    android:id="@+id/step2_destination_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/location_edit"
                    app:layout_constraintStart_toStartOf="@id/location_edit"
                    app:layout_constraintTop_toBottomOf="@id/location_edit"
                    tools:text="destination" />

                <CheckBox
                    android:id="@+id/seven_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/seven"
                    app:layout_constraintEnd_toStartOf="@+id/family_box"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/destination_icon"
                    app:layout_constraintTop_toBottomOf="@id/step2_destination_edit" />

                <CheckBox
                    android:id="@+id/family_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/family"
                    app:layout_constraintEnd_toStartOf="@+id/hi_life_box"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/seven_box"
                    app:layout_constraintTop_toTopOf="@id/seven_box" />

                <CheckBox
                    android:id="@+id/hi_life_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hi_life"
                    app:layout_constraintEnd_toStartOf="@+id/ok_mart_box"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/family_box"
                    app:layout_constraintTop_toTopOf="@id/family_box" />

                <CheckBox
                    android:id="@+id/ok_mart_box"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_mart"
                    app:layout_constraintEnd_toEndOf="@+id/step2_destination_edit"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/hi_life_box"
                    app:layout_constraintTop_toTopOf="@id/hi_life_box" />

                <Button
                    android:id="@+id/next_step_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/next_step"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/step2_destination_edit"
                    app:layout_constraintTop_toBottomOf="@id/ok_mart_box" />

                <Button
                    android:id="@+id/previous_step_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/previous_step"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/destination_icon"
                    app:layout_constraintTop_toBottomOf="@id/ok_mart_box" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>