<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="step1"
            type="String" />

        <variable
            name="viewModel"
            type="com.yuyu.barhopping.map.MapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/step1_card_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/step1_constrain_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/step1_title_tv"
                    style="@style/step_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/step_1"
                    app:layout_constraintEnd_toEndOf="@id/step1_constrain_layout"
                    app:layout_constraintStart_toStartOf="@id/step1_constrain_layout"
                    app:layout_constraintTop_toTopOf="@id/step1_constrain_layout" />

                <TextView
                    android:id="@+id/step1_content_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="left"
                    android:text="@string/step_1_content"
                    app:layout_constraintEnd_toEndOf="@id/step1_title_tv"
                    app:layout_constraintStart_toStartOf="@id/step1_title_tv"
                    app:layout_constraintTop_toBottomOf="@id/step1_title_tv" />

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintBottom_toBottomOf="@id/destination_edit"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintStart_toStartOf="@id/step1_content_tv"
                    app:layout_constraintTop_toTopOf="@id/destination_edit"
                    app:srcCompat="@drawable/google_maps" />

                <EditText
                    android:id="@+id/destination_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/search_here"
                    android:isScrollContainer="false"
                    android:text="@={viewModel.selectedLocationName}"
                    app:layout_constraintEnd_toEndOf="@id/step1_content_tv"
                    app:layout_constraintStart_toEndOf="@id/search_icon"
                    app:layout_constraintTop_toBottomOf="@id/step1_content_tv" />


                <Button
                    android:id="@+id/next_step_btn"
                    style="@style/step_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/next_step"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintCircleRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@id/destination_edit"
                    app:layout_constraintTop_toBottomOf="@id/destination_edit" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>